--- a/Clothes_Shop/vhod.html
+++ b/Clothes_Shop/vhod.html
@@ -68,9 +68,9 @@
                         <div class="input-form">
                             <input type="password" placeholder="Password">
                         </div>
-                        <div class="input-form">
+                        <a href="./admin.html"><div class="input-form">
                             <input type="submit" value="Enter">
-                        </div>
+                        </div></a>
                         <a href="https://connect.vk.com/restore/#/resetPassword" class="forget">Forgot password?</a>
                     </div>
 
